force-app/main/default/objects/LOVING_Document__c/LOVING_Document__c.object-meta.xml
<CustomObject>
    <label>LOVING Document</label>
    <nameField>
        <displayFormat>DOC-{YYYY}-{0000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOVING Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>