force-app/main/default/objects/LOVING_Document__c/fields/Builder_PO__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder PO</label>
    <referenceTo>Builder_PO__c</referenceTo>
    <relationshipLabel>LOVING Documents</relationshipLabel>
    <relationshipName>LOVING_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>