force-app/main/default/objects/LOVING_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Takeoff Summary PDF</fullName>
                <default>true</default>
                <label>Takeoff Summary PDF</label>
            </value>
            <value>
                <fullName>Takeoff Measurement Sheet</fullName>
            </value>
            <value>
                <fullName>Quote Verification PDF</fullName>
            </value>
            <value>
                <fullName>Change Notification / EPO PDF</fullName>
            </value>
            <value>
                <fullName>Site Readiness Summary</fullName>
            </value>
            <value>
                <fullName>Closeout Packet</fullName>
            </value>
            <value>
                <fullName>Warranty Review Packet</fullName>
            </value>
            <value>
                <fullName>Quality Inspection Report</fullName>
            </value>
            <value>
                <fullName>Aqua Install Summary</fullName>
            </value>
            <value>
                <fullName>Aqua Check Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>