force-app/main/default/objects/LOVING_Document__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>LOVING Documents</relationshipLabel>
    <relationshipName>LOVING_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>