force-app/main/default/objects/LOVING_Document__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>LOVING Documents</relationshipLabel>
    <relationshipName>LOVING_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>